[gd_scene load_steps=7 format=3 uid="uid://d0pwau4w45s2f"]

[ext_resource type="PackedScene" uid="uid://ux1lgkuk6mvl" path="res://SoundManager/volume_settings.tscn" id="1_1guw7"]
[ext_resource type="Theme" path="res://game_theme.tres" id="1_vhnue"]
[ext_resource type="Script" path="res://pause_menu.gd" id="2_b6bf3"]
[ext_resource type="PackedScene" uid="uid://bi0ok84377k2o" path="res://InputMapper/key_rebind.tscn" id="3_luewq"]
[ext_resource type="AudioStream" uid="uid://byc0xvlhhjvi0" path="res://SoundManager/tick.wav" id="5_05ue3"]

[sub_resource type="LabelSettings" id="LabelSettings_vsawu"]
font_color = Color(1, 1, 1, 0.752941)

[node name="PauseMenu" type="VBoxContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vhnue")
script = ExtResource("2_b6bf3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_vsawu")
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1

[node name="Volume" parent="TabContainer" instance=ExtResource("1_1guw7")]
layout_mode = 2

[node name="Key Bindings" parent="TabContainer" instance=ExtResource("3_luewq")]
visible = false
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2
alignment = 1

[node name="Resume" type="Button" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Resume"

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_05ue3")

[connection signal="tab_clicked" from="TabContainer" to="." method="_on_tab_container_tab_clicked"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/Resume" to="." method="_on_resume_pressed"]
